@@ -128,6 +128,10 @@ sub to_xpath {
                 push @parts, "[1]";
             } elsif ($1 =~ /^nth-of-type\((\d+)\)$/) {
                 push @parts, "[$1]";
+            } elsif ($1 =~ /^contains\($/) {
+                $rule =~ s/^\s*"([^"]*)"\s*\)\s*$//
+                    or die "Malformed string in :contains(): '$rule'";
+                push @parts, qq{[text()[contains(string(.),"$1")]]};
             } else {
                 Carp::croak "Can't translate '$1' pseudo-class";
             }
