@@ -5,6 +5,7 @@ Revision history for Perl extension HTML::Selector::XPath
       - Add CSS3 ":first-of-type" and ":nth-of-type()" pseudo-attributes
         (but if you're using them, you're likely better off using XPath already)
       - Add CSS3 "~" operator
+      - Add :contains() selector (only immediate child nodes)
 
 0.04  Sat Feb 27 01:43:00 PST 2010
       - No code change. Fix the packaging issue and typo in the doc
